# fastlimit

./: LICENSE  README.md  pyproject.toml
src/fastlimit/algorithms/: TokenBucket  base.py  fixed_window.py  sliding_window.py
src/fastlimit/storages/: base.py  redis_tcp.py  upstash_http.py
