[project]
name = "fastlimit"
version = "0.1.0"
description = "Advanced, API rate limiting library for both server driven and serverless architecture"
requires-python >="3.9"
license = {text = "MIT"}
authors = [{name = "Nandu", email = "nandu.ganeshan.nair@gmail.com"}]
keywords = ["rate-limit", "ratelimiter", "fastapi", "serverless", "redis", "upstash"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "upstash-redis >= 0.2.0",
    "redis >= 5.0.0",
    "prometheus-client >= 0.20.0",
    "structlog >= 24.0.0",     # nice structured logging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_ratelimit"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/examples",
]